refractor Order Detail